# idle

./: idle.cabal
data/: absurdium.ore  adamantium.ore  amethyst.ore  aquamarine.ore  arcanium.ore  bone.ore  clay.ore  coal.ore  copper.ore  cosmolite.ore  crystal.ore  cursed-bone.ore  darkstone.ore  demonite.ore  diamond.ore  earth-essence.ore  emerald.ore  eternium.ore  fire-essence.ore  gold.ore  haunted-bone.ore  iron.ore  lead.ore  light-essence.ore  lunalite.ore  magic-crystal.ore  mithril.ore  mysterium.ore  mysticite.ore  novalite.ore  obsidian.ore  orbium.ore  paper.ore  platinum.ore  poo.ore  quartz.ore  rock.ore  ruby.ore  salt.ore  sapphire.ore  (+9 more)
src/: Main.hs
src/Idle/: Ore.hs
src/Idle/Ore/: Parse.hs
src/Idle/Screens/: Home.hs
